footer follows scroll, but now covers content. need to fix

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,7 @@
 @import "./navbar.css";
+@import "./footer.css";
+@import "./contact-us.css";
+@import "./index.css";
 
 * {
     box-sizing: border-box;
@@ -18,16 +21,4 @@ body::-webkit-scrollbar {
 
 .hidden {
     display: none
-}
-
-#footer-bar {
-    width: 100%;
-    height: var(--nav-height);
-    display: flex;
-    justify-content: space-evenly;
-    align-items: space-evenly;
-    background-color: #3B4E4C;
-    font-size: 24px;
-    font-weight: 500;
-    align-items: center;
 }
